first page done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,15 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
-  #   - images/a_dot_ham.jpeg
+    - assets/woman1.jpeg
+    - assets/man1.jpeg
+    - assets/woman2.jpeg
+    - assets/man2.jpeg
+    - assets/woman3.jpeg
+    - assets/man3.jpeg
+    - assets/woman4.jpeg
+    - assets/man4.jpeg
+    - assets/man5.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
