--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ flutter:
     - assets/woman4.jpeg
     - assets/man4.jpeg
     - assets/man5.jpeg
+    - assets/surfing.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
